[workspace]
members = [".", "entity", "migration"]
resolver = "2"

[package]
name = "sledge"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
tabled = "0.15.0"
